# Cloud-Stream

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  proxy.rs  tmdb.rs
src-tauri/src/providers/: example_scraper.rs  manager.rs  mod.rs  playsrc.rs  vidsrc.rs
src/components/common/: HeroBanner.tsx  MovieCard.tsx  Row.tsx  SkeletonCard.tsx
src/components/layout/: MainLayout.tsx  Sidebar.tsx
src/pages/: Details.tsx  Home.tsx  Library.tsx  Player.tsx  Search.tsx  Settings.tsx
src/services/: tmdb.ts
src/styles/: globals.css
