[package]
name = "app"
version = "0.1.0"
description = "A production-ready media streaming backend"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async & Networking
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "fs"] }
base64 = "0.22"
urlencoding = "2.1"
async-trait = "0.1"

# HTTP Client (using rustls for maximum stability on Windows)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Scraping
scraper = "0.22"

# Logging & Observability
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
dotenvy = "0.15.7"
